maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: value &&! is not a member of Boolean
		if (estFaceMur&&!Wall){
                              ^